# maxcloud-app-c18

./: .gitignore  README.md  build.gradle  gradle.properties  script.sh  settings.gradle  signing.properties
Keyboard/: build.gradle
Keyboard/src/main/: AndroidManifest.xml
Keyboard/src/main/java/com/maxcloud/keyboard/compat/: EditorInfoCompatUtils.java  (+4 more)
Keyboard/src/main/res/layout/: adb_layout.xml  input_view.xml  main_keyboard_frame.xml  more_keys_keyboard.xml
Keyboard/src/main/res/values/: attrs.xml  keyboard-icons-lxx-dark.xml  keyboard-icons-lxx-light.xml  keyboard-themes.xml  keyboard_switch_language_background.xml  strings-appname.xml
Keyboard/src/main/res/values-v24/: keyboard-icons-lxx-system.xml  keyboard-themes.xml
Keyboard/src/main/res/xml/: method.xml  prefs.xml  prefs_screen_appearance.xml  prefs_screen_key_press.xml
app/: build.gradle  google-services.json  proguard-rules.pro
app/debug/: output-metadata.json
app/release/: output-metadata.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/sing-box/: geoip.db.xz  geosite.db.xz  geosite.version.txt
app/src/main/cpp/: CMakeLists.txt  NativeCore.cpp
app/src/main/cpp/Base/: Base.cpp  Base.h
app/src/main/cpp/Base/ADB/: ADB.cpp  ADB.h
app/src/main/cpp/Base/API/: API.cpp  API.h
app/src/main/cpp/Base/ASAction/: ASAction.cpp  ASAction.h
app/src/main/cpp/Base/ASService/: ASModel.h  ASService.cpp  ASService.h
app/src/main/cpp/Base/Common/: Common.cpp  Common.h
app/src/main/cpp/Base/Device/: Device.cpp  Device.h
app/src/main/cpp/Base/Extensions/: ThreadSafeQueue.h
app/src/main/cpp/Base/Http/: Http.cpp  Http.h
app/src/main/cpp/Base/JNI/: JExt.cpp  JExt.h
app/src/main/cpp/Base/Json/: JSON.cpp  JSON.h
app/src/main/cpp/Base/Media/: Media.cpp  Media.h
app/src/main/cpp/Base/Nocode/: NodeType.h  OWrapper.cpp  OWrapper.h
app/src/main/cpp/Base/RTC/: RTC.cpp  RTC.h  RTCModel.h
app/src/main/cpp/Base/Social/: Social.cpp  Social.h
app/src/main/cpp/Base/Socket/: Socket.cpp  Socket.h
app/src/main/cpp/Base/Storage/: Storage.cpp  Storage.h
app/src/main/cpp/Core/Facebook/: FacebookCore.cpp  FacebookExt.cpp  FacebookExt.h
app/src/main/cpp/Core/Google/: GoogleCore.cpp  GoogleExt.cpp  GoogleExt.h
app/src/main/cpp/Core/Instagram/: InstaCore.cpp  InstaExt.cpp  InstaExt.h
app/src/main/cpp/Core/Tiktok/: TiktokCore.cpp  TiktokExt.cpp  TiktokExt.h
app/src/main/cpp/Lib/: cryptor.hpp  json.hpp  pugixml.hpp
app/src/main/cpp/Lib/libdatachannel/: CMakeLists.txt
app/src/main/cpp/Lib/libdatachannel/src/: capi.cpp
app/src/main/java/com/maxcloud/app/: AdbCaller.java  App.java
app/src/main/res/drawable/: background.xml
app/src/main/res/layout/: floatview.xml  login_layout.xml  main_layout.xml
app/src/main/res/values/: colors.xml  ic_min_launcher_background.xml  integers.xml  strings.xml  themes.xml
app/src/main/res/xml/: accessibility_config.xml  device_admin_receiver.xml  interaction_service.xml  network_security_config.xml
gradle/wrapper/: gradle-wrapper.properties
release/: output-metadata.json
(+107 files in other folders)
